# yanluo-app

./: .gitignore  .npmrc  AGENTS.md  CONTRIBUTING.md  README.md  dev-app-update.yml  electron-builder.ts  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.test.json  tsconfig.web.json  vitest.config.ts
.docs/: WINDOWS_HOTKEY_ACCEPTANCE.md  WINDOWS_HOTKEY_TEST_REPORT_TEMPLATE.md
.github/workflows/: ci.yml
models.dev/: api.json
native/keyboard-helper/: CMakeLists.txt  README.md
native/keyboard-helper/include/: keyboard_helper.h
native/keyboard-helper/src/macos/: keyboard_helper_mac.mm
native/keyboard-helper/src/windows/: keyboard_helper_win.cpp
services/asr/: download_model.py  main.py  pyproject.toml  requirements.txt  stream_debug_client.py
services/asr/shims/librosa/: pyproject.toml
services/asr/shims/librosa/librosa/: __init__.py
src/main/: appLifecycle.ts  asrService.ts  bootstrapMainApp.ts  historyStore.ts  index.ts  modelManager.ts  pythonEnv.ts  registerIpcHandlers.ts  settingsStore.ts  statusBarTray.ts
src/main/config/: asrDefaults.ts
src/main/ipc/: handlerServices.ts  registerAiPolishIpcHandlers.ts  registerAsrIpcHandlers.ts  registerHistoryIpcHandlers.ts  registerSystemIpcHandlers.ts  registerTestIpcHandlers.ts  registerVoiceIpcHandlers.ts  types.ts  utils.ts
src/main/keyboard/: createHotkeyManager.ts  hotkeyMatcher.ts  index.ts  nativeBridge.ts  nativeHotkeyManager.ts  protocol.ts  stubHotkeyManager.ts  types.ts
src/main/logging/: exportLogs.ts  index.ts  logger.ts
src/main/permissions/: mediaPermissions.ts
src/main/polish/: polishEngine.ts
src/main/voice/: audioCapture.ts  bootstrap.ts  hotkeyManager.ts  hotkeyState.ts  index.ts  (+6 more)
src/preload/: index.d.ts  index.ts  micCaptureBridge.ts  voiceBridge.ts
src/renderer/: index.html
src/shared/: index.ts
tests/e2e/: fixtures.ts  history-live-update.spec.ts  shortcut-hub.spec.ts  smoke.spec.ts
tests/unit/: formatters.test.ts  ipc-aiRegistry.integration.test.ts  ipc-contracts.test.ts  ipc-handlerServices.test.ts  ipc-history.integration.test.ts  ipc-registerHandlers.test.ts  ipc-system.integration.test.ts  ipc-test.integration.test.ts  keyboard-hotkeyMatcher.test.ts  keyboard-nativeHotkeyManager.test.ts  sessionOrchestrator.test.ts
(+49 files in other folders)
