[project]
name = "yanluo-asr-service"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.6",
  "qwen-asr==0.0.6",
  "modelscope>=1.16.0",
  "setuptools<81",
]

[tool.uv]
# Keep dependency resolution local to this service
managed = true
