[project]
name = "yanluo-asr-service"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy<2",
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.6",
  "sherpa-onnx>=1.12.24",
  "onnx>=1.20.0",
  "modelscope>=1.16.0",
  "setuptools<81",
  "soundfile>=0.13.1",
]

[tool.uv]
# Keep dependency resolution local to this service
managed = true
